			type->i_enum->is_sequential   => type->flags & INTRO_IS_SEQUENTIAL

			type->array_size              => type->count

			intro_size(type)              => type->size
			<unavailable>                 => type->align

			if (type->of)                 => if (intro_has_of(type))
			/* 'of' now shares storage with other fields */

	- Struct member offsets are now known at parse time.
		- Value attributes now support structs (including C99 style initialization)
		- Generated headers are much more concise (no more offsetof's)
		- NOTE: pack(x), __attribute__((aligned(x))), etc. are not yet implemented

	- New "expr" attribute type generates bytecode for expressions
	that can access struct/union members.

	- The "length" attriubte is now an expression. This is useful if the size
	of data is dependent on multiple variables, for example: I(length map_width * map_height)

	- New builtin attribute "when" for using an expression to dynamically
	determine when a struct/union member is valid.

	- City is now much more reliable
		- much better handling of pointers
		- city file data can now be discarded after load
		- reduction in serialized data size

	- New IntroContainer system provides a simple API for recursively working
	on data while retaining context for how the data was accessed.

	- '#prama intro' can be used to control what parts of a file should have
	information generated
		- push, pop
		- enable [x], disable [x] where x is either omitted or one of the
		following: functions, macros, all, includes, system

	- Macro information generation (use pragma "enable macros")

	- Files are now tokenized all at once. Previously, the preprocessor and
	parser would tokenize as needed. This simplifies the preprocessor and
	parser.

	- intro_print() improvements

	- Vim syntax generation with --gen-vim-syntax

	- intro parser performance metrics report with option '-V'

	- Miscellaneous fixes and improvements

0.1 (Beta)
	first public release